--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 <button onclick="addHomeThree()">+3</button>
             </div>
             <div>
-                <h3>GUEST</h3>
+                <h3>AWAY</h3>
                 <div id="guest-score" class="score">0</div>
                 <button onclick="addGuestOne()">+1</button>
                 <button onclick="addGuestTwo()">+2</button>
