--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
         <div class="container">
             <div>
                 <h3>HOME</h3>
-                <div id="home-score" class="score">0</div>
-                <button onclick="addHomeOne()">+1</button>
-                <button onclick="addHomeTwo()">+2</button>
-                <button onclick="addHomeThree()">+3</button>
+                <div id="home-score" class="score + home">0</div>
+                <button onclick="addHomeOne()"  class="home">+1</button>
+                <button onclick="addHomeTwo()"  class="home">+2</button>
+                <button onclick="addHomeThree()" class="home">+3</button>
             </div>
             <div>
                 <h3>AWAY</h3>
-                <div id="guest-score" class="score">0</div>
-                <button onclick="addGuestOne()">+1</button>
-                <button onclick="addGuestTwo()">+2</button>
-                <button onclick="addGuestThree()">+3</button>
+                <div id="guest-score" class="score + away">0</div>
+                <button onclick="addGuestOne()" class="away">+1</button>
+                <button onclick="addGuestTwo()" class="away">+2</button>
+                <button onclick="addGuestThree()" class="away">+3</button>
             </div>
         </div>
         <div class="container">
