--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <div class="container">
             <div>
                 <h3>HOME</h3>
+                <h3>ALIENS</h3>
                 <div id="home-score" class="score + home">0</div>
                 <button onclick="addHomeOne()"  class="home">+1</button>
                 <button onclick="addHomeTwo()"  class="home">+2</button>
@@ -13,6 +14,7 @@
             </div>
             <div>
                 <h3>AWAY</h3>
+                <H3>UNICORNS</H3>
                 <div id="guest-score" class="score + away">0</div>
                 <button onclick="addGuestOne()" class="away">+1</button>
                 <button onclick="addGuestTwo()" class="away">+2</button>
