updated name, text shadows

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <body>
         <div class="container">
             <div>
-                <h3>HOME</h3>
                 <h3>ALIENS</h3>
                 <div id="home-score" class="score + home">0</div>
                 <button onclick="addHomeOne()"  class="home">+1</button>
@@ -13,8 +12,7 @@
                 <button onclick="addHomeThree()" class="home">+3</button>
             </div>
             <div>
-                <h3>AWAY</h3>
-                <H3>UNICORNS</H3>
+                <h3>UNICORNS</h3>
                 <div id="guest-score" class="score + away">0</div>
                 <button onclick="addGuestOne()" class="away">+1</button>
                 <button onclick="addGuestTwo()" class="away">+2</button>
